--- a/website/css/bootstrap.css
+++ b/website/css/bootstrap.css
@@ -11,7 +11,8 @@ html {
       -ms-text-size-adjust: 100%;
 }
 body {
-  margin: 0;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 article,
 aside,
@@ -564,7 +565,7 @@ a.bg-danger:hover {
 }
 .page-header {
   padding-bottom: 9px;
-  margin: 40px 0 20px;
+  margin: 0px 20px;
   border-bottom: 1px solid #eee;
 }
 ul,
@@ -584,13 +585,16 @@ ol ol {
 }
 .list-inline {
   padding-left: 0;
-  margin-left: -5px;
   list-style: none;
+  width: 200px;
+  margin-left: 500px;
+  margin-top: -40px
 }
 .list-inline > li {
   display: inline-block;
   padding-right: 5px;
   padding-left: 5px;
+
 }
 dl {
   margin-top: 0;
@@ -738,6 +742,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+
 }
 @media (min-width: 768px) {
   .container {
@@ -3837,8 +3842,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-form {
-  padding: 10px 15px;
-  margin-top: 8px;
+  padding: 0px 15px;
+  margin-top: -40px;
   margin-right: -15px;
   margin-bottom: 8px;
   margin-left: -15px;
