--- a/website/css/bootstrap.css
+++ b/website/css/bootstrap.css
@@ -457,10 +457,12 @@ h3,
 h4,
 .h4 {
   font-size: 18px;
+
 }
 h5,
 .h5 {
   font-size: 14px;
+  color: #fff;
 }
 h6,
 .h6 {
@@ -567,6 +569,7 @@ a.bg-danger:hover {
   padding-bottom: 9px;
   margin: 0px 20px;
   border-bottom: 1px solid #eee;
+  background-color: #042c88;
 }
 ul,
 ol {
@@ -584,16 +587,16 @@ ol ol {
   list-style: none;
 }
 .list-inline {
-  padding-left: 0;
+  padding-left: 30px;
   list-style: none;
-  width: 200px;
-  margin-left: 500px;
-  margin-top: -40px
+  width: 500px;
+  margin-top: 0px;
 }
 .list-inline > li {
   display: inline-block;
   padding-right: 5px;
   padding-left: 5px;
+  mar
 
 }
 dl {
@@ -3498,10 +3501,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-tabs {
   border-bottom: 1px solid #ddd;
+
 }
 .nav-tabs > li {
   float: left;
   margin-bottom: -1px;
+  text-align: center;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 .nav-tabs > li > a {
   margin-right: 2px;
@@ -3843,10 +3850,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-form {
   padding: 0px 15px;
-  margin-top: -40px;
+  margin-top: -30px;
+
   margin-right: -15px;
   margin-bottom: 8px;
   margin-left: -15px;
+  padding-right: 30px;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(255, 255, 255, .1);
