--- a/website/css/home.css
+++ b/website/css/home.css
@@ -1,22 +1,11 @@
-body{
-	margin: 10px 50px;
-}
-
-
-/**.page-header ul li{
-	display: inline;
-	margin-left: 0px;
-	margin-top: 0px;
-	padding-right: 10px;
-	padding-left: 10px;
-
-}**/
-
 
 #logo{
-	width: 250px;
-	height: 150px;
-	padding: 0px;
+	width: auto;
+	height: auto;
+	margin-left: 350px;
+	margin-top: 10px;
+	margin-bottom: 20px;
+
 	float: center;
 
 }
