--- a/website/css/bootstrap.css
+++ b/website/css/bootstrap.css
@@ -316,6 +316,8 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  margin-top: 10px;
+
 }
 .img-rounded {
   border-radius: 6px;
@@ -566,9 +568,8 @@ a.bg-danger:hover {
   background-color: #e4b9b9;
 }
 .page-header {
-  padding-bottom: 9px;
-  margin: 0px 20px;
-  border-bottom: 1px solid #eee;
+
+  border-bottom: 2px solid #04246E;
   background-color: #042c88;
 }
 ul,
@@ -596,7 +597,6 @@ ol ol {
   display: inline-block;
   padding-right: 5px;
   padding-left: 5px;
-  mar
 
 }
 dl {
@@ -745,6 +745,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+
 
 }
 @media (min-width: 768px) {
@@ -3027,7 +3028,7 @@ input[type="button"].btn-block {
   margin: 2px 0 0;
   font-size: 14px;
   list-style: none;
-  background-color: #fff;
+  background-color: #ddd;
   background-clip: padding-box;
   border: 1px solid #ccc;
   border: 1px solid rgba(0, 0, 0, .15);
@@ -3051,7 +3052,7 @@ input[type="button"].btn-block {
   clear: both;
   font-weight: normal;
   line-height: 1.42857143;
-  color: #333;
+  color: #042c88;
   white-space: nowrap;
 }
 .dropdown-menu > li > a:hover,
@@ -3501,6 +3502,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-tabs {
   border-bottom: 1px solid #ddd;
+  background-color: #042c88;
 
 }
 .nav-tabs > li {
@@ -3509,20 +3511,24 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   text-align: center;
   padding-left: 50px;
   padding-right: 50px;
+
 }
 .nav-tabs > li > a {
   margin-right: 2px;
   line-height: 1.42857143;
   border: 1px solid transparent;
   border-radius: 4px 4px 0 0;
+  color: #ddd;
 }
 .nav-tabs > li > a:hover {
   border-color: #eee #eee #ddd;
+  background-color: #fff;
+  color: #042c88;
 }
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
-  color: #555;
+  color: #042c88;
   cursor: default;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -3530,7 +3536,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-tabs.nav-justified {
   width: 100%;
-  border-bottom: 0;
+  border-bottom: 1px solid #ddd;
 }
 .nav-tabs.nav-justified > li {
   float: none;
@@ -3650,11 +3656,13 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: -1px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+
+
 }
 .navbar {
   position: relative;
   min-height: 50px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   border: 1px solid transparent;
 }
 @media (min-width: 768px) {
@@ -3664,6 +3672,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media (min-width: 768px) {
   .navbar-header {
+
+
     float: left;
   }
 }
@@ -3849,13 +3859,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-form {
-  padding: 0px 15px;
-  margin-top: -30px;
-
+  padding: 10px 15px;
+  margin-top: 8px;
   margin-right: -15px;
   margin-bottom: 8px;
   margin-left: -15px;
-  padding-right: 30px;
   border-top: 1px solid transparent;
   border-bottom: 1px solid transparent;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(255, 255, 255, .1);
@@ -4050,7 +4058,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #999;
 }
 .navbar-inverse .navbar-nav > li > a {
-  color: #999;
+  color: #ddd;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
@@ -5427,11 +5435,13 @@ button.close {
 }
 .carousel {
   position: relative;
+
 }
 .carousel-inner {
   position: relative;
   width: 100%;
   overflow: hidden;
+
 }
 .carousel-inner > .item {
   position: relative;
