--- a/website/css/subpage.css
+++ b/website/css/subpage.css
@@ -69,7 +69,7 @@ a{
 	margin-right: 25px;
 	display:inline-block;
 	border-radius: 4px;
-	background-color:pink;
+	background-color:gray;
 }
 
 #facts{
