--- a/website/css/subpage.css
+++ b/website/css/subpage.css
@@ -55,7 +55,7 @@ a{
 
 .content{
 	width: 900px;
-	height: 1000px;
+	height: 100%;
 	float:left;
 	margin-left:25px;
 	display: inline-block;
@@ -65,7 +65,6 @@ a{
 	width: 500px;
 	height: 350px;
 	float:left;
-	margin-left: 25px;
 	margin-right: 25px;
 	display:inline-block;
 	border-radius: 4px;
@@ -84,11 +83,70 @@ a{
 }
 
 #content-text-top{
+	margin-top: 10px;
+}
+
+footer{
+	width:100%;
+	height: 290px;
+	margin-top: 50px;
+	margin-right, margin-left: 20px;
+	background-color: #333333;
+	float: left;
+	display:inline-block;
+}
+.footer-div ul li,
+.footer-div ul,
+.footer-div-a ul li,
+.footer-div-a ul{
+	list-style-type:none;
+	margin-left:0;
+	padding-left:0;
+	display: block;
+	padding: 1.5px;
+}
+
+.footer-div,
+.footer-div-a{
+	height: 190px;
+	width: 20%;
+	color: #428bca;
+	float: left;
+	display: inline-block;
+	vertical-align:center;
+	text-align:left;
+	padding: 3px 30px;
+	margin-top: 20px;
+}
+
+.footer-div-a{ 
+	border-right: 1px solid #999999;
+	text-align: right;
+}
+
+.footer-div img{
+	height: 75%;
 	margin-top:20px;
 }
-#content-text{
-	text-align:left;
-	color: #444444;
-	font-size: 13px;
-	clear:left;
+
+#copyright{
+	width: 100%;
+	color: #888888;
+	text-align: center;
+	clear: both;
+	display: block;
+	font-size: 11px;
+	padding-top: 10px;
+	padding-bottom: 20px;
+}
+
+#social-media{
+	text-align: center;
+	margin:auto;
+}
+#social-media img{
+	height: 30px; width: 30px;
+	display: inline-block;
+	text-align: center;
+	margin: 10px 5px 0 5px;
 }
