--- a/website/css/bootstrap.css
+++ b/website/css/bootstrap.css
@@ -464,7 +464,7 @@ h4,
 h5,
 .h5 {
   font-size: 14px;
-  color: #fff;
+  color: red;
 }
 h6,
 .h6 {
@@ -3512,6 +3512,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding-left: 50px;
   padding-right: 50px;
 
+
 }
 .nav-tabs > li > a {
   margin-right: 2px;
@@ -3548,6 +3549,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-tabs.nav-justified > .dropdown .dropdown-menu {
   top: auto;
   left: auto;
+  text-align: left;
 }
 @media (min-width: 768px) {
   .nav-tabs.nav-justified > li {
