--- a/website/css/home.css
+++ b/website/css/home.css
@@ -1,8 +1,59 @@
 
 #logo{
-	width: auto;
-	height: auto;
-	margin-left: 420px;
-	margin-top: 20px;
+	display: block;
+	margin-top: 0px;
 	margin-bottom: 10px;
+	padding-top: 10px;
+}
+
+#news{
+	border: 3px solid #ddd;
+	width: 277px;
+	height:320px;
+	margin-left: 15px;
+	margin-right: 10px;
+	margin-top: 10px;
+
+}
+
+#events{
+	border: 3px solid #ddd;
+	width: 277px;
+	height:320px;
+	margin-right: 10px;
+	margin-top: 10px;
+
+}
+
+#community{
+	border: 3px solid #ddd;
+	width: 277px;
+	height:320px;
+	margin-right: 10px;
+	margin-top: 10px;
+
+}
+
+#explore{
+	border: 3px solid #ddd;
+	width: 277px;
+	height:320px;
+	margin-right: 15px;
+	margin-top: 10px;
+
+}
+
+#events-info{
+	padding-left: 4px;
+	border-bottom: 1px solid #ddd;
+
+}
+
+#events-info p{
+	font-size: 14px;
+
+}
+
+#explore-info{
+	padding-top: 8px;
 }
